*made announcement section

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,2 +1,4 @@
 @import 'base';
 @import 'variables';
+@import url('https://fonts.googleapis.com/css?family=Sen:regular,700,800');
+@import 'layout/announcement'
