--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,27 @@
+@import url("https://fonts.googleapis.com/css?family=Sen:regular,700,800");
 * {
   padding: 0;
   margin: 0;
+  font-family: "Sen", sans-serif;
+  font-size: 16px;
+}
+
+.announcement {
+  background-color: #222;
+}
+.announcement p {
+  color: #f9f9f9;
+  font-size: 18px;
+}
+.announcement a {
+  text-decoration: none;
+  color: #f9f9f9;
+  border: solid transparent;
+  background-color: #eb5757;
+  padding: 5px 20px 5px 20px;
+  border-radius: 20px;
+}
+.announcement .row {
+  padding-top: 30px;
+  padding-bottom: 15px;
 }
