--- a/sass/layout/_announcement.scss
+++ b/sass/layout/_announcement.scss
@@ -3,6 +3,7 @@
     p {
         color: $white;
         font-size: 18px;
+        float: left;
     }
     a {
         text-decoration: none;
@@ -11,9 +12,10 @@
         background-color: $red;
         padding: 5px 20px 5px 20px;
         border-radius: 20px;
+        float: right;
     }
     .row {
-        padding-top: 30px;
-        padding-bottom: 15px;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 }
