--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Sen&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Sen:regular,700,800");
 * {
   padding: 0;
   margin: 0;
@@ -12,7 +12,6 @@
 .announcement p {
   color: #f9f9f9;
   font-size: 18px;
-  float: left;
 }
 .announcement a {
   text-decoration: none;
@@ -21,9 +20,8 @@
   background-color: #eb5757;
   padding: 5px 20px 5px 20px;
   border-radius: 20px;
-  float: right;
 }
 .announcement .row {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 30px;
+  padding-bottom: 15px;
 }
