--- a/sass/layout/_announcement.scss
+++ b/sass/layout/_announcement.scss
@@ -3,6 +3,7 @@
     p {
         color: $white;
         font-size: 18px;
+        float: left;
     }
     a {
         text-decoration: none;
@@ -11,6 +12,7 @@
         background-color: $red;
         padding: 5px 20px 5px 20px;
         border-radius: 20px;
+        float: right;
     }
     .row {
         padding-top: 30px;
