--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,4 +1,5 @@
 @import 'base';
 @import 'variables';
 @import url('https://fonts.googleapis.com/css?family=Sen:regular,700,800');
-@import 'layout/announcement'
+@import 'layout/announcement';
+@import 'layout/_navbar.scss';
