--- a/sass/index.scss
+++ b/sass/index.scss
@@ -2,4 +2,5 @@
 @import 'variables';
 @import url('https://fonts.googleapis.com/css?family=Sen:regular,700,800');
 @import 'layout/announcement';
-@import 'layout/_navbar.scss';
+@import 'layout/navbar';
+@import 'sections/hero';
