--- a/css/index.css
+++ b/css/index.css
@@ -81,3 +81,27 @@
   background-color: #f9f9f9;
   transition: 0.3s ease;
 }
+
+.support {
+  padding-top: 50px;
+}
+.support span {
+  text-transform: uppercase;
+}
+.support h1 {
+  font-weight: bold;
+}
+.support .product-heading {
+  color: #f9f9f9;
+  padding-top: 165px;
+  padding-bottom: 165px;
+}
+.support .product-wrapper {
+  background-color: #222;
+  text-align: center;
+  border-radius: 5px;
+}
+.support .product-heading-numbers {
+  color: #f9f9f9;
+  float: left;
+}
