--- a/sass/layout/_announcement.scss
+++ b/sass/layout/_announcement.scss
@@ -10,7 +10,7 @@
         text-decoration: none;
         color: $white;
         border: solid transparent;
-        background-color: $red;
+        background-color: $blue;
         padding: 5px 20px 5px 20px;
         border-radius: 20px;
     }
