--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: $red;
+    background-color: $blue;
     padding: 10px 0 10px 0;
     ul {
         padding-top: 15px;
