--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
   font-family: "Sen", sans-serif;
   font-size: 16px;
 }
@@ -41,15 +42,24 @@
   padding-top: 15px;
   float: right;
 }
-.navbar li {
+.navbar ul li {
   display: inline-block;
-  padding-right: 50px;
+  padding-right: 40px;
 }
-.navbar a {
+.navbar ul a {
   text-decoration: none;
   color: #f9f9f9;
+  border: 1px solid transparent;
+  padding: 5px 10px 5px 10px;
+  transition: 0.3s ease;
 }
-.navbar .shopping-cart-btn {
+.navbar ul a:hover {
+  background-color: #222;
+  border: 1px solid #222;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+.navbar ul .shopping-cart-btn {
   background-color: #222;
   padding: 6px 15px 6px 15px;
   border-radius: 5px;
