--- a/css/index.css
+++ b/css/index.css
@@ -44,11 +44,18 @@
 
 .navbar {
   background-color: #0077b6;
-  padding: 10px 0 10px 0;
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-grow: 1;
+  position: relative;
 }
 .navbar ul {
   padding-top: 15px;
-  float: right;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
 }
 .navbar ul li {
   display: inline-block;
@@ -60,6 +67,7 @@
   }
   .navbar ul li:nth-child(6) {
     display: block;
+    padding-top: 7px;
   }
 }
 .navbar ul a {
@@ -79,6 +87,15 @@
   background-color: #222;
   padding: 6px 15px 6px 15px;
   border-radius: 5px;
+}
+.navbar .hamburger-menu-li {
+  display: none;
+}
+@media (max-width: 991px) {
+  .navbar .hamburger-menu-li {
+    display: block;
+    margin-right: -20px;
+  }
 }
 
 .hamburger-menu-btn {
