--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -1,52 +1,67 @@
 .navbar {
-    background-color: $blue;
-    padding: 10px 0 10px 0;
-    ul {
-        padding-top: 15px;
-        float: right;    
-        li {
-            display: inline-block;
-            padding-right: 40px;
+  background-color: $blue;
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-grow: 1;
+  position: relative;
+  ul {
+    padding-top: 15px;
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    li {
+      display: inline-block;
+      padding-right: 40px;
 
-            @media (max-width: $lg) {
-                display: none;
+      @media (max-width: $lg) {
+        display: none;
 
-                &:nth-child(6) {
-                    display: block;
-                }
-            }
-
+        &:nth-child(6) {
+          display: block;
+          padding-top: 7px;
         }
-        a {
-            text-decoration: none;
-            color: $white;
-            border: 1px solid transparent;
-            padding: 5px 10px 5px 10px;
-            transition: 0.3s ease;
-         &:hover {
-             background-color: $dark;
-             border: 1px solid $dark;
-             border-radius: 5px;
-             transition: 0.3s ease;
-         }
-        }
-        .shopping-cart-btn {
-            background-color: $dark;
-            padding: 6px 15px 6px 15px;
-            border-radius: 5px;
-        }
+      }
     }
+    a {
+      text-decoration: none;
+      color: $white;
+      border: 1px solid transparent;
+      padding: 5px 10px 5px 10px;
+      transition: 0.3s ease;
+      &:hover {
+        background-color: $dark;
+        border: 1px solid $dark;
+        border-radius: 5px;
+        transition: 0.3s ease;
+      }
+    }
+    .shopping-cart-btn {
+      background-color: $dark;
+      padding: 6px 15px 6px 15px;
+      border-radius: 5px;
+    }
+  }
+  .hamburger-menu-li {
+    display: none;
+
+    @media (max-width: $lg) {
+      display: block;
+      margin-right: -20px;
+    }
+  }
 }
 
 .hamburger-menu-btn {
-    background-color: transparent;
-    color: $white;
-    border: 0;
-    display: none;
-    i {
-        font-size: 38px;
-    }
-    @media (max-width: $lg) {
-        display: block;
-    }
+  background-color: transparent;
+  color: $white;
+  border: 0;
+  display: none;
+  i {
+    font-size: 38px;
+  }
+  @media (max-width: $lg) {
+    display: block;
+  }
 }
