added responsivnes to a hero section

--- a/css/index.css
+++ b/css/index.css
@@ -114,7 +114,7 @@
 }
 
 .hero {
-  background-size: 100%;
+  background-size: cover;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("../img/background-image.jpg");
   background-position: center;
   background-repeat: no-repeat;
